--- a/src/app/Mycomponents/add-todo/add-todo.component.html
+++ b/src/app/Mycomponents/add-todo/add-todo.component.html
@@ -6,7 +6,7 @@
       <span class="input-group-text">Enter Title & Description</span>
       <input type="text" aria-label="Enter Title" [(ngModel)] ="title" class="form-control" placeholder="Enter Title" id="title" name="title">
       <input type="text" aria-label="Enter Description" [(ngModel)] ="desc" class="form-control" placeholder="Enter Description" id="desc" name="desc">
-      <button class="btn btn-outline-primary" type="submit" id="">ADD</button>
+      <button class="btn btn-outline-dark" type="submit" id="">ADD</button>
     </div>
 
   </div>
