--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary">
+<nav class="navbar navbar-expand-lg bg-secondary">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,9 +22,9 @@
     </div>
   </div>
 </nav>
-<div class="container">
+<div class="container" >
 
-  <h1 class="text-center mt-4 mb-4">TODO LIST BY MADDY</h1>
+  <h1 class="text-center mt-4 mb-4">TASK MANAGER IN ANGULAR BY MADDY</h1>
 
   <app-todos></app-todos>
   <!-- <router-outlet></router-outlet> -->
