--- a/src/app/Mycomponents/todos-item/todos-item.component.css
+++ b/src/app/Mycomponents/todos-item/todos-item.component.css
@@ -1,3 +1,8 @@
 .strike{
   text-decoration: line-through;
 }
+
+.description {
+  max-width: 100%; /* Limit maximum width */
+  word-wrap: break-word; /* Allow long words to be broken and wrap onto the next line */
+}
