--- a/src/app/Mycomponents/todos-item/todos-item.component.html
+++ b/src/app/Mycomponents/todos-item/todos-item.component.html
@@ -1,16 +1,41 @@
 <div class="container w-50 ">
-  <div class="alert alert-primary text-center" role="alert">
-    <h5 [ngClass]="{'strike': !todo.active}" >Title : {{todo.title}} </h5>
-    <p [ngClass]="{'strike': !todo.active}" ><span style="font-weight: 700;"> Description : </span> {{todo.desc}}</p>
+  <div class="alert alert-dark text-center" role="alert">
+
+    <div *ngIf="isTimerRunning" class="seconds alert alert-success">
+      <span class="timer">{{ targetTime }} seconds</span>
+    </div>
+    <h5 [ngClass]="{'strike': !todo.active}">Title : {{todo.title}} </h5>
+    <div class="letters d-flex justify-content-center align-items-center flex-wrap">
+      <p [ngClass]="{'strike': !todo.active}" class="description"><span style="font-weight: 700;"> Description : </span> {{todo.desc}}</p>
+    </div>
     <div class="buttons d-flex justify-content-center align-items-center gap-2">
       <!-- <button class="btn btn-outline-primary  btn-sm">EDIT</button> -->
+
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="onCheckedboxClick(todo)" [checked]="!todo.active">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="onCheckedboxClick(todo)"
+          [checked]="!todo.active">
         <label class="form-check-label" for="flexCheckDefault">
           Mark as Done
         </label>
       </div>
-      <button class="btn btn-outline-danger  btn-sm" (click)="onClick(todo)">DELETE</button>
+
+    </div>
+    <div class="actionsbtn row">
+      <div class="col">
+        <!-- <button class="btn btn-outline-success  btn-sm w-100">SET TIMER</button> -->
+        <button class="btn btn-outline-success btn-sm w-100" (click)="setTimer()">
+          {{ isTimerRunning ? 'STOP TIMER' : 'SET TIMER' }}
+        </button>
+
+
+      </div>
+      <!-- <div class="col">
+        <button class="btn btn-outline-primary  btn-sm w-100">EDIT</button>
+      </div> -->
+      <div class="col">
+        <button class="btn btn-outline-danger  btn-sm w-100" (click)="onClick(todo)">DELETE</button>
+      </div>
+
     </div>
   </div>
 </div>
